# Hedgebot

./: .gitignore  etl.py  pyproject.toml
hedgebot/: __main__.py  bot.py  db.py
hedgebot/modules/dnd/: cog.py
hedgebot/modules/general/: cog.py
hedgebot/modules/random/: 8ball_responses.txt  cog.py
hedgebot/modules/services/: __init__.py  cog.py
hedgebot/modules/utility/: __init__.py  cog.py
hedgebot/modules/utility/fitness/: __init__.py  backup.py  cog.py  db  ddl.py  etl.py  sql.py  validate.py
hedgebot/modules/utility/fitness/backups/: 2023-03-24_backup.txt  2023-03-25_backup.txt
hedgebot/modules/utility/hots/: __init__.py  cog.py  etl.py  sql.py  team.pkl
hedgebot/modules/utility/hots/backups/: OG.csv  Pairings_OG.csv  db  ddl.py  etl.py
hedgebot/modules/utility/hots/data/: composition.csv  hero_selection.py  heroes.csv  roles.csv  roster.csv
hedgebot/tools/: embed.py  utils.py
