[tool.poetry]
name = "hedgebot"
version = "0.1.0"
description = "Discord bot"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
discord = "^2.3.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
tabulate = "^0.9.0"
requests = "^2.31.0"
nltk = "^3.8.1"
scikit-learn = "^1.5.0"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
